# g1fitting

./: .gitignore  CMakeLists.txt  Clothoid.cpp  Clothoid.h  LICENSE.txt  MANIFEST.in  README.md  g1fittingmodule.cpp  setup.py  test.cpp  test.py
g1fitting/: Clothoid.cpp  Clothoid.h  __init__.py  g1fittingmodule.cpp  test.py
